--- a/Homeworks/Homework6/OrbitCOM.ipynb
+++ b/Homeworks/Homework6/OrbitCOM.ipynb
@@ -8,7 +8,12 @@
    "source": [
     "#ASTR 400B Homework 6\n",
     "#Simulating MW, M31, and M33 and plotting their orbits\n",
-    "#Madison Walder"
+    "#Madison Walder\n"
+    "#People collaborated with:\n"
+    "#Mackenzie James\n"
+    "#Ryan Webseter\n"
+    "#Sean Cunningham\n"
+    
    ]
   },
   {
