Submitted Completed Lab 10

--- a/Labs/Lab10/Lab10.ipynb
+++ b/Labs/Lab10/Lab10.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute COM of the MW at the new position using disk particles\n",
-    "COMP = COM.COM_P(0.1, 2)\n",
+    "COMP = COM.COM_P(0.1)\n",
     "COMV = COM.COM_V(COMP[0],COMP[1],COMP[2])\n",
     "# Determine positions of disk particles relative to COM \n",
     "MW_Disk_x = COM.x - COMP[0].value \n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,54 +188,9 @@
        "13"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n",
-      "button 1 pressed\n",
-      "button 1 released\n",
-      "box extent is [-4.3548387096774235, 2.999999999999993, -2.7199561002377948, 3.9869520151210267]\n"
-     ]
     }
    ],
    "source": [
@@ -292,35 +247,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Let's store the circular velocity of the MW like we did in Lab 7\n",
     "\n",
-    "# ADD MassProfile Object.\n"
+    "# ADD MassProfile Object.\n",
+    "MWCirc = MassProfile(\"MW\", 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add an array for radii up to 40 kpc\n",
+    "R = np.arange(0.01, 40, 0.5)\n",
     "\n",
     "\n",
     "# Store Vcirc \n",
-    "\n"
+    "Vcirc = MWCirc.CircularVelocityTotal(R)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1) Copy over the call back function and the onkeypressed function\n",
+    "\n",
     "\n",
     "# Step 3) Let figure out how to select a region in the density and plot it also in the right panel\n",
     "# We also don't want to zoom in on the left panel, instead let's just mark the region we examined. \n",
@@ -330,15 +288,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def callbackRectangle( click, release ): # the events are click and release\n",
+    "    print( f\"button {click.button} pressed\" )\n",
+    "    print( f\"button {release.button} released\" )\n",
+    "    extent = [ click.xdata, release.xdata, click.ydata, release.ydata ]\n",
+    "    print( f\"box extent is {extent}\") \n",
+    "    \n",
+    "    # ADD - in order to zoom in reset the axes to the clicked box size\n",
+    "    #ax[0].set_xlim(click.xdata, release.xdata)\n",
+    "    #ax[0].set_ylim(click.ydata, release.ydata)\n",
+    "    \n",
+    "    #Create a rectangle\n",
+    "    width = np.abs(release.xdata - click.xdata)\n",
+    "    height = np.abs(click.ydata - release.ydata)\n",
+    "    \n",
+    "    Rect = plt.Rectangle((click.xdata, click.ydata), width, height, fill=False, color=\"yellow\", linewidth=3)\n",
+    "    ax[0].add_patch(Rect)\n",
+    "    \n",
+    "    #use the selected region to find the corresponding particles in the phase diagram\n",
+    "    index = np.where((MW_Disk_x > click.xdata) & (MW_Disk_x < release.xdata) & (MW_Disk_vy > click.ydata) \\\n",
+    "                    & (MW_Disk_vy < release.ydata))\n",
+    "    ax[0].scatter(MW_Disk_x[index], MW_Disk_y[index])\n",
+    "    \n",
+    "    # Save the file\n",
+    "    plt.savefig(\"Density_Velocity.png\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # add the ability to reset the image using an \"on key press\" function \n",
+    "def onKeyPressed(event):\n",
+    "        if event.key in ['R', 'r']:\n",
+    "            ax[0].set_xlim(-30,30)\n",
+    "            ax[0].set_ylim(-30,30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "button 1 pressed\n",
+      "button 1 released\n",
+      "box extent is [-19.10080645161291, -6.326612903225808, 182.00762294848016, 223.23412501783935]\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 2) \n",
     "# Add not just the density but also the phase diagram as a separate panel.\n",
     "# Copy over the plotting code (2D histogram) and modify the figure so that there are now two panels.\n",
     "\n",
     "# Add a phase diagram: X vs VY\n",
+    "\n",
+    "# plot the particle density for the MW Disk and then zoom in on a region of the disk \n",
+    "\n",
+    "fig, ax = plt.subplots(nrows = 1, ncols=2, figsize =(25 ,10))                             \n",
+    "# ax[0] --> Density\n",
+    "# ax[1] --> Phase diagram\n",
+    "\n",
+    "# 2d histogram \n",
+    "ax[0].hist2d(MW_Disk_x,MW_Disk_y, bins=200, norm=LogNorm(), cmap='magma')\n",
+    "#plt.colorbar(label='Number  of  Disk Particles  per  bin')\n",
+    "\n",
+    "# over plot contours\n",
+    "density_contour(MW_Disk_x, MW_Disk_y, 80, 80, ax=ax[0], \\\n",
+    "                colors=['white'])\n",
+    "   \n",
+    "\n",
+    "#set axis limits\n",
+    "ax[0].set_ylim(-30,30)\n",
+    "ax[0].set_xlim(-30,30)\n",
+    "\n",
+    "\n",
+    "# Add axis labels\n",
+    "ax[0].set_xlabel('x (kpc)', fontsize=22)\n",
+    "ax[0].set_ylabel('y (kpc)', fontsize=22)\n",
+    "\n",
+    "#Phase diagram is on the right panel\n",
+    "ax[1].hist2d(MW_Disk_x, MW_Disk_vy, bins=200, norm=LogNorm(), cmap=\"magma\")\n",
+    "\n",
+    "ax[1].plot(R, -Vcirc, color='blue')\n",
+    "ax[1].plot(-R, Vcirc, color='blue')\n",
+    "#set axis limits\n",
+    "ax[1].set_xlim(-30,30)\n",
+    "\n",
+    "ax[1].set_xlabel(\"x (kpc)\")\n",
+    "ax[1].set_ylabel(\"velocity along y axis (km/s)\")\n",
+    "\n",
+    "## NEW: Rectangle Selector.     \n",
+    "rs = mw.RectangleSelector( ax[1],                        # the axes to attach to\n",
+    "                           callbackRectangle,         # the callback function\n",
+    "                           drawtype='box',            # draw a box when selecting a region\n",
+    "                           button=[1, 3],             # allow us to use left or right mouse button\n",
+    "                                                      #button 1 is left mouse button\n",
+    "                           minspanx=5, minspany=5,    # don't accept a box of fewer than 5 pixels\n",
+    "                           spancoords='pixels' )      # units for above\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ADDED THIS\n",
+    "# to detect the 'R' key press to reset the image\n",
+    "plt.connect(\"key_press_event\", onKeyPressed)\n",
     "\n",
     "\n"
    ]
@@ -355,17 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copy over the Call back function and the onkeypressed function from Part C\n",
-    "# flip the axes ax[0] < --- > ax[1]"
+    "# flip the axes ax[0] < --- > ax[1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,13 +468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Compute COM of the MW at the new position using disk particles\n",
-    "COMP_2 = COM_2.COM_P(0.1, 2)\n",
+    "COMP_2 = COM_2.COM_P(0.1)\n",
     "# Determine positions of disk particles relative to COM \n",
     "MW_Disk_2_x = COM_2.x - COMP_2[0].value \n",
     "MW_Disk_2_y = COM_2.y - COMP_2[1].value \n"
@@ -408,22 +482,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copy over the Call back function and the onkeypressed function from Part C\n",
+    "def callbackRectangle( click, release ): # the events are click and release\n",
+    "    print( f\"button {click.button} pressed\" )\n",
+    "    print( f\"button {release.button} released\" )\n",
+    "    extent = [ click.xdata, release.xdata, click.ydata, release.ydata ]\n",
+    "    print( f\"box extent is {extent}\") \n",
+    "    \n",
+    "    # ADD - in order to zoom in reset the axes to the clicked box size\n",
+    "    #ax[0].set_xlim(click.xdata, release.xdata)\n",
+    "    #ax[0].set_ylim(click.ydata, release.ydata)\n",
+    "    \n",
+    "    #Create a rectangle\n",
+    "    width = np.abs(release.xdata - click.xdata)\n",
+    "    height = np.abs(click.ydata - release.ydata)\n",
+    "    \n",
+    "    Rect = plt.Rectangle((click.xdata, click.ydata), width, height, fill=False, color=\"yellow\", linewidth=3)\n",
+    "    ax[0].add_patch(Rect)\n",
+    "    \n",
+    "    #use the selected region to find the corresponding particles in the phase diagram\n",
+    "    index = np.where((MW_Disk_x > click.xdata) & (MW_Disk_x < release.xdata) & (MW_Disk_y > click.ydata) \\\n",
+    "                    & (MW_Disk_y < release.ydata))\n",
+    "    ax[1].scatter(MW_Disk_2_x[index], MW_Disk_2_y[index])\n",
+    "    \n",
+    "    # Save the file\n",
+    "    plt.savefig(\"Density_Velocity.png\")\n",
+    "    \n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "button 1 pressed\n",
+      "button 1 released\n",
+      "box extent is [-23.080645161290327, -15.229838709677429, -3.830659136781584, 9.380619380619379]\n"
+     ]
+    }
+   ],
    "source": [
     "# Copy over the plotting script from Part C\n",
     "# Instead of the phase plot, have the second panel be the MW at a different snapshot\n",
+    "fig, ax = plt.subplots(nrows = 1, ncols=2, figsize =(25 ,10))                             \n",
+    "# ax[0] --> Density\n",
+    "# ax[1] --> Density at snapshot 400\n",
+    "\n",
+    "# 2d histogram \n",
+    "ax[0].hist2d(MW_Disk_x,MW_Disk_y, bins=200, norm=LogNorm(), cmap='magma')\n",
+    "#plt.colorbar(label='Number  of  Disk Particles  per  bin')\n",
+    "\n",
+    "# over plot contours\n",
+    "density_contour(MW_Disk_x, MW_Disk_y, 80, 80, ax=ax[0], \\\n",
+    "                colors=['white'])\n",
+    "   \n",
+    "\n",
+    "#set axis limits\n",
+    "ax[0].set_ylim(-30,30)\n",
+    "ax[0].set_xlim(-30,30)\n",
+    "\n",
+    "\n",
+    "# Add axis labels\n",
+    "ax[0].set_xlabel('x (kpc)', fontsize=22)\n",
+    "ax[0].set_ylabel('y (kpc)', fontsize=22)\n",
+    "\n",
+    "#Phase diagram is on the right panel it is Snapshot 400\n",
+    "ax[1].hist2d(MW_Disk_2_x, MW_Disk_2_y, bins=200, norm=LogNorm(), cmap=\"magma\")\n",
+    "\n",
+    "\n",
+    "#set axis limits\n",
+    "ax[1].set_xlim(-70,70)\n",
+    "ax[1].set_ylim(-70,70)\n",
+    "ax[1].set_xlabel(\"x (kpc)\")\n",
+    "ax[1].set_ylabel(\"y (kpc)\")\n",
+    "\n",
+    "## NEW: Rectangle Selector.     \n",
+    "rs = mw.RectangleSelector( ax[0],                        # the axes to attach to\n",
+    "                           callbackRectangle,         # the callback function\n",
+    "                           drawtype='box',            # draw a box when selecting a region\n",
+    "                           button=[1, 3],             # allow us to use left or right mouse button\n",
+    "                                                      #button 1 is left mouse button\n",
+    "                           minspanx=5, minspany=5,    # don't accept a box of fewer than 5 pixels\n",
+    "                           spancoords='pixels' )      # units for above\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ADDED THIS\n",
+    "# to detect the 'R' key press to reset the image\n",
+    "plt.connect(\"key_press_event\", onKeyPressed)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
